# wikidev

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: gh-pages.yml
docs/: index.md
docs/ai-tools/: index.md
docs/ai-tools/chatgpt/: index.md
docs/ai-tools/claude-code/: index.md
docs/ai-tools/claude-code/guides/: prompting.md  workflow.md
docs/ai-tools/claude-code/mcp/: configurations.md
docs/ai-tools/claude-desktop/: index.md
docs/ai-tools/claude-desktop/guides/: conversations.md
docs/ai-tools/claude-desktop/mcp/: integrations.md
docs/ai-tools/gemini-cli/: index.md
docs/ai-tools/ollama/: index.md  models.md
docs/ai-tools/ollama/guides/: api-integration.md  performance.md  privacy.md
docs/data-analysis/: data-cleaning.md  feature-engineering.md  index.md  methodology.md  pandas-cheats.md
docs/databases/: dbeaver.md  index.md  performance.md  schema-design.md  setup-tools.md  sql-aggregations.md  sql-basics.md  sql-joins.md  sql-subqueries-ctes.md
docs/git/: basic-workflow.md  branching-model.md  github-cli.md  index.md  pull-requests.md  setup-identity.md
docs/node/: index.md  install-setup.md  project-init.md
docs/python/: data-workflow.md  environments.md  index.md  install-setup.md  project-structure.md  pyenv.md  uv.md
docs/toolkit/: index.md  mkdocs.md  vscode-cursor.md
