[project]
name = "wikidev"
version = "0.1.0"
description = "Development templates, guides, and workflows for modern software engineering"
authors = [{name = "Diogo Silva"}]
requires-python = ">=3.11"

dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-section-index>=0.3.0",
]